text truncation fix.

--- a/sampleExtension/optionsPage/options.css
+++ b/sampleExtension/optionsPage/options.css
@@ -49,6 +49,7 @@ table {
 .pageTitle {
     position: relative;
     max-width: 100%;
+    display: block;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
